--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/checkout@v2
       with: 
         repository: lowkh2/GoTrackRemoteExample
-        path: remove
+        path: remote
         token: ${{ secrets.GOTRACK }}
         
     - name: show hidden file
