--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -8,8 +8,8 @@ jobs:
     name: Virtual Machine
     runs-on: Ubuntu-latest
     steps:
-    #- name: checkout my codes
-    #  uses: actions/checkout@v2
+    - name: checkout my codes
+      uses: actions/checkout@v2
     #- name: print and list out content
     #  run: |
     #    ls
