--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -37,8 +37,8 @@ jobs:
 
     - name: Install dependencies for GO
       run: |
-        go get github.com/franela/goblin # Adds package for Goblin testing
-        go get github.com/tebeka/go2xunit # Adds package for conversion
+        # go get github.com/franela/goblin # Adds package for Goblin testing
+        # go get github.com/tebeka/go2xunit # Adds package for conversion
         go test -v # Command to run go test
         go test -v | go2xunit > report.xml # run test again and output as report.xml (to show the effect)
         ls # verify that the report is indeed created
