--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -78,7 +78,7 @@ jobs:
           Workflow name - `${{ github.workflow }}`
           Job -           `${{ github.job }}`
           status -        `${{ job.status }}`
-        assignees: Lowkh
+        assignees: yjdonavan
     
     - name: Publish Test Results
       uses: EnricoMi/publish-unit-test-result-action/composite@v2
